updated Blog post

--- a/project.html
+++ b/project.html
@@ -1,7 +1,14 @@
 <html>
 	<body>
-		<h1>hello world</h1>
-		<p>kungaa</p>
+		<h1>
+		Blog Post about Survey Questionnaire
+		</h1>
+
+		<p>
+		I intend to carefully read the questions of the "survey to evaluate the public perception of current electrical and Electronic Waste (E-Waste) management and recycling practices in Sri Lanka". I  willingly participate in this survey to convey my opinion regarding E-Waste. I believe that the information I  provide will be helpful to raise awareness and take necessary actions to protect the environment from the harmful effects of E-Waste. After completing the online survey, I expect to read the awareness blog post on sustainable E-Waste management and the remedial actions taken against E-Waste related environmental problems.
+
+		I hereby give my consent to use the information that I provide for research and academic purposes only. I understand that such activities that fall under the research and academic scope will not reveal my identity or my organization.
+		</p>
 
 	</body>
 </html>
