--- a/project.html
+++ b/project.html
@@ -1,14 +1,100 @@
 <html>
+	<head>
+	<link rel="Stylesheet" href="style.css">
+	</head>
 	<body>
-		<h1>
-		Blog Post about Survey Questionnaire
-		</h1>
-
-		<p>
-		I intend to carefully read the questions of the "survey to evaluate the public perception of current electrical and Electronic Waste (E-Waste) management and recycling practices in Sri Lanka". I  willingly participate in this survey to convey my opinion regarding E-Waste. I believe that the information I  provide will be helpful to raise awareness and take necessary actions to protect the environment from the harmful effects of E-Waste. After completing the online survey, I expect to read the awareness blog post on sustainable E-Waste management and the remedial actions taken against E-Waste related environmental problems.
-
-		I hereby give my consent to use the information that I provide for research and academic purposes only. I understand that such activities that fall under the research and academic scope will not reveal my identity or my organization.
+		<p class="menu-bar">
+		The untold story of E-wastes: from the cradle to the graveyard 
 		</p>
+		<img src="1.jpg" width="1315px" height="700px" class="image" align="center">
+		<p class="para">
+		The advent of Electrical and Electronic Equipment (EEE) has enabled human civilization to thrive with countless new inventions in every front, including health, information technology, transportation, and other sectors over the past few decades. The everyday use of these types of equipment span from household needs like kitchen appliances to more personal devices like mobile phones. As with any modern-day product requirement, EEEs eventually meet their end as better alternatives replace them with more advanced features. Also, factors like the end of the usable lifespan, non-functional or technological obsolescence results in the rapid demise of an EEE. This gives birth to a new breed of waste called "electronic and electrical wastes (E-waste)" that adversely impacts human health and the environment.
+		</p>
+		<p>
+		Hazardous substances and toxic additivesembedded in modern EEEs, such asheavy metals and chemicals such as lead, mercury, chlorofluorocarbons (CFC), and hydrochlorofluorocarbons (HCFC) (Global E-waste Monitor ,2020) eventually get blended in to the natural environment as piles of e-wastes without proper management. CFC and HCFC waste cause ozone depletion and global warming. In the year 2019, 53.6 million metric tons of E-waste (i.e. 7.3 kg per capita) has been discarded around the world Global E-waste monitor (2020). The waste collection can be further classified as it contains 13.1 Mt of large equipment, 17.4Mt of small equipment, 108Mt of Temperature exchange equipment, 6.7Mt of Screen and monitors, 4.7Mt of small IT and telecommunication equipment and 0.9Mt of lamps(Forti, Baldé, Kuehr, & Bel, 2020)(Figure 1).
+		</p>
+		<img src="2.jpg" width="900px" height="700px" class="image2" align="center">
+		<p>
+		When considered region-wise, the highest amount of E-waste generated in Asia (24.9Mt) and only 2.9Mt of E-waste are documented and properly recycled. The European region has the highest collecting and recycling rate of 42.5% (5.1Mt) out of total generated e-waste of 12Mt. Africa region has the lowest recycling rate 0.9% (0.03Mt) ) out of total generated e-waste of 2.9Mt. Of the other 82.6% which aren't documented, 7% to 20% are exported to developing countries as second-hand products or as e-waste. According to the estimates, global E-waste will be more than 74 million metric tons by 2030. So the global E-waste increases by 2 million metric tons per year(Forti, Baldé, Kuehr, & Bel, 2020)(Figure 2 and 3).
+		</p>
+		<img src="3.jpg" width="1315px" height="700px" class="image" align="center">
+		
+		<p>
+		According to that report, countries that have adopted a national e-waste policy and regulations have increased by 44% since 2014, but that includes only 78 countries out of 193 countries, including popular countries like India and China. Having only laws and regulations is not enough to implement them practically. In order to execute e-waste recycling programs successfully, people's awareness about the factors such as the adverse impact of e-waste, proper disposal methods available in their areas, and how they can contribute to protecting human health and the environment by disposing of e-waste properly are essential.
+		</p>
+		<p>
+		Most people in a country like Sri Lanka do not have proper knowledge regarding the e-waste and they have no clear idea what happens if they dump them into the environment recklessly. Also, most people are not familiar with the term e-waste, and they do not know how to divide normal trash and e-waste. Due to the lower level of awareness regarding the e-waste, they do not pay any attention to clearly manage the e-waste. They mostly prefer to resell their electronic equipment after ending their useful lifetime. Not only that some people burn e-waste without knowing what harm can be done by burning them. 
+		</p>
+		<p class="topic"><b>Challenges of the E-waste</b></p>
+		<table class="para">
+		<tr>
+		<td><img src="4.jpg" width="500px" height="700px" class="image" align="center"></td>
+		<td><p>
+		Most developing countries discarded their e-waste as landfill which can be harmful for the environment as well as the human body. Before landfilling, some e-waste burned in the opening yard. That will cause air pollution, because when burning most harmful toxic air will be released into the atmosphere. Also, those hazardous substances of e-waste add to the water resources as well. Together those things led to a huge environmental pollution which can harm the animals and the human. This problem is very massive in developing countries, compared to developed countries. 
+		</br>
+		Importing second-hand equipment from developed countries also led to the increase of the e-waste in developing countries. Most of the time those are imported illegally, without doing proper checking. Basal convention causes a huge problem to the people who are in the developing countries.
+		</br>
+		Another problem is Ignorance of the toxicity of the hazardous nature of e-waste. There is a lack of awareness-raising in government circles about the potential dangers of e-waste. Also, public people are not fully educated regarding the dangerous impact of e-waste.
+		</br>
+		Lack of investment is a common problem in developing countries. Also, this can have an impact on the e-waste management systems. Because some e-scrap recycling program can be costly, which cannot afford by those poor countries. Due to that they have failed to implement a strategy to recycle e-waste properly.
+		</br>
+		Not having proper legislation is another important problem arising under the e-waste management. If those rules exist, the government can control improper disposal of e-waste and prohibit the illegal importance of e-waste as well as second-hand equipment.
+		</p></td>
+		</tr>
+		</table>
+		
+		<p>
+		Also, the attitude of the public towards e-waste in developing countries is also challenging. Because most people prefer to get some money by selling their e-waste while other developed country's public pay money to discard their e-waste. So, this attitude should be changed in order to launch a proper e-waste management mechanism.  
+		</p>
+		<p>
+		Also, there are no proper guidelines for the unorganized sector to handle E-waste. No incentives are mentioned to lure people engaged to adopt a formal path for handling E-waste. Working conditions in the informal recycling sector are worse than in the formal sectors. There are no proper motivations for the workers who are doing work to recycle e-waste. Because working with electronic waste is not good for human health. Due to that most employees are not willingly coming for that job, that's why it needs some motivation and to ensure the safety of employees as well.
+		</p>
+		<p>
+		Not only the government, but also manufacturers should be responsible for their electronic equipment after sale. So, there are no proper rules and regulations for the manufacturers regarding the e-scrap. Also, there is no proper database for the electronic equipment, which shows the lifetime of the e-waste, customer information and can show which customer is going to discard their electronic equipment next.
+		</p>
+		<p class="topic"><b>How to overcome the e-waste challenge</b></p>
+		<p class="para">
+		As e-waste is a challenge for the present world, we need solutions to overcome those challenges. Sometimes e-waste can bring economic benefits and sometimes it can lead to losses. However, we should be able to overcome the e-waste challenge due to it contains hazardous and non-hazardous substances. Therefore, to overcome the e-waste challenge, the below solutions can be implemented.
+		</p>
+		
+		<ul type="round">
+		<p>
+			<li class="subtopic">Properly implement 3R concept</li>
+			The 3R concept includes reduce, reuse, and recycle. E-waste challenge can be successfully defeated, if we can successfully implement the 3R concept. </br>
+Reduce – When buying electronic equipment, we can select devices that have a minimum amount of e-waste. It's better to purchase less amount of electronic equipment. </br>
+Reuse – Repeatedly using the products or parts of the products that are usable.</br>
+Recycle – Producing products after separating discarded electronics into parts.
+
+</p>
+
+			<p>
+			<li class="subtopic">Enhance people's awareness of e-waste</li>
+			The public should be informed about e-waste because some electronic equipment has hazardous substances, and it causes so many diseases in human health. Then people will no longer tend to keep unnecessary equipment with them. The importance of recycling e-waste should be convinced to society in enhancing the awareness of e-waste. And also, the society should be convinced to buy environmentally friendly products.
+			</p>
+			<p>
+			<li class="subtopic">Return used electronics to the manufacturer</li>
+			If manufacturers can implement a system to collect used electronic and electrical equipment from the customers, then it will add a huge value to the company as well as for the society. Then they can offer a discount for the customers that return electronics. By then it will be a path to market the company in the industry.  
+			</p>
+			<p>
+			<li class="subtopic">Keep online data storage</li>
+			At present there are so many cloud storages available for storing data. Cloud storages are a good alternative instead of electronic storage equipment. Then the e-waste challenge can be reduced if people tend to use online storages. (Egg: Google Drive)
+			</p>
+			<p>
+			<li class="subtopic">Implement a proper policy for e-waste management</li>
+			If a country can implement a proper policy system for e-waste management, it influences directly on e-waste. It's a good way to diminish e-waste in the country as well as in the world. 
+			</p></br>
+			<p class="topic"><b>Value of e-waste</b></p>
+			<p class="para">
+			When it comes to the value of e-waste, we can consider e-waste as a resource that makes a value from many perspectives. Mainly from the economic perspective, e-waste is a source of money. It means e-waste contains some valuable substances. Such as gold, cadmium, silver, lead etc. So, by using these valuable substances, money can be earned. This is called e-waste mining. According to that, those valuable substances can be mined and using that we can make valuable products. On the other hand, we can focus on recycling. Nowadays most of the countries also pay attention on recycling plants because there is a vast e-waste recycling market in the world. Therefore, it assists in many ways for the economy of a country due to recycling is becoming one of the largest and most valuable industries in the world. To reduce unemployment, to earn foreign currency by importing products, to increase per capita income etc. In Sri Lanka also, there are recycling plants. But if we can take actions to expand recycling plants and make improvements for the existing recycling plants, we can achieve a great development as a country. 
+			</p>
+			<p>
+			
+			
+			
+		
+		
+		
+		
 
 	</body>
 </html>
