--- a/project.html
+++ b/project.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-	<link rel="Stylesheet" href="project css.css">
+	<link rel="Stylesheet" href="project1.css">
 	</head>
 	<body>
 		<p class="menu-bar">
