--- a/project.html
+++ b/project.html
@@ -1,7 +1,7 @@
 <html>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 	<head>
-	<link rel="Stylesheet" href="style.css">
+	<link rel="Stylesheet" href="project1.css">
 	</head>
 	<body>
 		<p class="menu-bar">
