--- a/project.html
+++ b/project.html
@@ -1,40 +1,66 @@
 <html>
-<meta name="viewport" content="width=device-width,initial-scale=1">
 	<head>
-	<link rel="Stylesheet" href="project1.css">
+	<link rel="Stylesheet" href="style.css">
 	</head>
 	<body>
-		<p class="menu-bar">
+
+		<div class="menu-bar">
+		<p class="">
 		The untold story of E-wastes: from the cradle to the graveyard 
 		</p>
-		<img src="1.jpg" width="1315px" height="700px" class="image" align="center">
-		<p class="colorimageref"><i>&lt OMISOLA, 2021 &gt</i></p>
-		<p class="para">
+		</div>
+			<br>
+
+		<div class="image">
+		<img src="1.jpg">
+		</div>
+
+		<div class="para">
+		<p >
 		The advent of Electrical and Electronic Equipment (EEE) has enabled human civilization to thrive with countless new inventions in every front, including health, information technology, transportation, and other sectors over the past few decades. The everyday use of these types of equipment span from household needs like kitchen appliances to more personal devices like mobile phones. As with any modern-day product requirement, EEEs eventually meet their end as better alternatives replace them with more advanced features. Also, factors like the end of the usable lifespan, non-functional or technological obsolescence results in the rapid demise of an EEE. This gives birth to a new breed of waste called "electronic and electrical wastes (E-waste)" that adversely impacts human health and the environment.
 		</p>
+		<br>
 		<p>
 		Hazardous substances and toxic additivesembedded in modern EEEs, such asheavy metals and chemicals such as lead, mercury, chlorofluorocarbons (CFC), and hydrochlorofluorocarbons (HCFC) (Global E-waste Monitor ,2020) eventually get blended in to the natural environment as piles of e-wastes without proper management. CFC and HCFC waste cause ozone depletion and global warming. In the year 2019, 53.6 million metric tons of E-waste (i.e. 7.3 kg per capita) has been discarded around the world Global E-waste monitor (2020). The waste collection can be further classified as it contains 13.1 Mt of large equipment, 17.4Mt of small equipment, 108Mt of Temperature exchange equipment, 6.7Mt of Screen and monitors, 4.7Mt of small IT and telecommunication equipment and 0.9Mt of lamps(Forti, Baldé, Kuehr, & Bel, 2020)(Figure 1).
 		</p>
-		<img src="2.jpg" width="900px" height="700px" class="image2" align="center">
+		</div>
+
+		<div class="image">
+		<img src="2.jpg">
 		<p class="colorimageref2"><i>Figure 1. Collected Global E-Waste &lt Mt &gt</i></p>
+		</div>
+
+		<div class="para">
 		<p>
 		When considered region-wise, the highest amount of E-waste generated in Asia (24.9Mt) and only 2.9Mt of E-waste are documented and properly recycled. The European region has the highest collecting and recycling rate of 42.5% (5.1Mt) out of total generated e-waste of 12Mt. Africa region has the lowest recycling rate 0.9% (0.03Mt) ) out of total generated e-waste of 2.9Mt. Of the other 82.6% which aren't documented, 7% to 20% are exported to developing countries as second-hand products or as e-waste. According to the estimates, global E-waste will be more than 74 million metric tons by 2030. So the global E-waste increases by 2 million metric tons per year(Forti, Baldé, Kuehr, & Bel, 2020)(Figure 2 and 3).
 		</p>
-		<img src="3.jpg" width="1315px" height="700px" class="image" align="center">
 		
+		</div>
+		<br>
+
+		<div class="image">
+		<img src="3.jpg">
 		<p class="colorimageref2"><i>Figure 2. Global E-Waste Statistics From The Global E-Waste monitor 2020, by Forti, V., Baldé, C. P., Kuehr, R., & Bel, G. &lt 2020&gt</i></p>
+		<p>
+		</div>
+		
+		<div class="para">
 		<p>
 		According to that report, countries that have adopted a national e-waste policy and regulations have increased by 44% since 2014, but that includes only 78 countries out of 193 countries, including popular countries like India and China. Having only laws and regulations is not enough to implement them practically. In order to execute e-waste recycling programs successfully, people's awareness about the factors such as the adverse impact of e-waste, proper disposal methods available in their areas, and how they can contribute to protecting human health and the environment by disposing of e-waste properly are essential.
 		</p>
 		<p>
 		Most people in a country like Sri Lanka do not have proper knowledge regarding the e-waste and they have no clear idea what happens if they dump them into the environment recklessly. Also, most people are not familiar with the term e-waste, and they do not know how to divide normal trash and e-waste. Due to the lower level of awareness regarding the e-waste, they do not pay any attention to clearly manage the e-waste. They mostly prefer to resell their electronic equipment after ending their useful lifetime. Not only that some people burn e-waste without knowing what harm can be done by burning them. 
 		</p>
-		<p class="topic"><b>Challenges of the E-waste</b></p>
-		<table class="para">
+		</div>
+
+		<div class="topic">
+		<p ><b>Challenges of the E-waste</b></p>
+	 	</div>
+
+		<div  class="para">
+		<table>
 		<tr>
-		<td><img src="4.jpg" width="500px" height="700px" class="image" align="center"></td>
-		
-		
+		<td><img src="4.jpg"></td>
 		<td><p>
 		Most developing countries discarded their e-waste as landfill which can be harmful for the environment as well as the human body. Before landfilling, some e-waste burned in the opening yard. That will cause air pollution, because when burning most harmful toxic air will be released into the atmosphere. Also, those hazardous substances of e-waste add to the water resources as well. Together those things led to a huge environmental pollution which can harm the animals and the human. This problem is very massive in developing countries, compared to developed countries. 
 		</br>
@@ -48,7 +74,9 @@
 		</p></td>
 		</tr>
 		</table>
+		</div>		
 		
+		<div  class="para">
 		<p>
 		Also, the attitude of the public towards e-waste in developing countries is also challenging. Because most people prefer to get some money by selling their e-waste while other developed country's public pay money to discard their e-waste. So, this attitude should be changed in order to launch a proper e-waste management mechanism.  
 		</p>
@@ -58,11 +86,19 @@
 		<p>
 		Not only the government, but also manufacturers should be responsible for their electronic equipment after sale. So, there are no proper rules and regulations for the manufacturers regarding the e-scrap. Also, there is no proper database for the electronic equipment, which shows the lifetime of the e-waste, customer information and can show which customer is going to discard their electronic equipment next.
 		</p>
-		<p class="topic"><b>How to overcome the e-waste challenge</b></p>
-		<p class="para">
+		</div>
+
+		<div class="topic">
+		<p><b>How to overcome the e-waste challenge</b></p>
+	</div>
+
+		<div class="para">
+		<p>
 		As e-waste is a challenge for the present world, we need solutions to overcome those challenges. Sometimes e-waste can bring economic benefits and sometimes it can lead to losses. However, we should be able to overcome the e-waste challenge due to it contains hazardous and non-hazardous substances. Therefore, to overcome the e-waste challenge, the below solutions can be implemented.
 		</p>
+	</div>
 		
+		<div class="para">
 		<ul type="round">
 		<p>
 			<li class="subtopic">Properly implement 3R concept</li>
@@ -90,21 +126,26 @@ Recycle – Producing products after separating discarded electronics into parts
 			If a country can implement a proper policy system for e-waste management, it influences directly on e-waste. It's a good way to diminish e-waste in the country as well as in the world. 
 			</p></br>
 			<p class="topic"><b>Value of e-waste</b></p>
-			<p class="para">
-			When it comes to the value of e-waste, we can consider e-waste as a resource that makes a value from many perspectives. Mainly from the economic perspective, e-waste is a source of money. It means e-waste contains some valuable substances. Such as gold, cadmium, silver, lead etc. So, by using these valuable substances, money can be earned. This is called e-waste mining. According to that, those valuable substances can be mined and using that we can make valuable products. On the other hand, we can focus on recycling. Nowadays most of the countries also pay attention on recycling plants because there is a vast e-waste recycling market in the world. Therefore, it assists in many ways for the economy of a
-			country due to recycling is becoming one of the largest and most valuable industries in the world. To reduce unemployment, to earn foreign currency by importing products, to increase per capita income etc. In Sri Lanka also, there are recycling plants. But if we can take actions to expand recycling plants and make improvements for the existing recycling plants, we can achieve a great development as a country. 
-			</p>
-			<p class="topicRef">REFERENCES
-			</p>
-			<p class="reference"><i>Forti, V., Baldé, C. P., Kuehr, R., & Bel, G. (2020). The Global E-waste Monitor 
+			<p class="para"><br>
+			When it comes to the value of e-waste, we can consider e-waste as a resource that makes a value from many perspectives. Mainly from the economic perspective, e-waste is a source of money. It means e-waste contains some valuable substances. Such as gold, cadmium, silver, lead etc. So, by using these valuable substances, money can be earned. This is called e-waste mining. According to that, those valuable substances can be mined and using that we can make valuable products. On the other hand, we can focus on recycling. Nowadays most of the countries also pay attention on recycling plants because there is a vast e-waste recycling market in the world. Therefore, it assists in many ways for the economy of a country due to recycling is becoming one of the largest and most valuable industries in the world. To reduce unemployment, to earn foreign currency by importing products, to increase per capita income etc. In Sri Lanka also, there are recycling plants. But if we can take actions to expand recycling plants and make improvements for the existing recycling plants, we can achieve a great development as a country. 
+			</p></br><a href= "https://www.youtube.com/watch?v=S2lmPIa1iWE&ab_channel=BusinessInsider">https://www.youtube.com/watch?v=S2lmPIa1iWE&ab_channel=BusinessInsider</a> <br></br>
+			<p>
+			</div><br></br> <br></br> 
+			<div><p class="topicRef"> REFERENCES</p>
+			</div>
+
+			<div><p class="reference"><i>Forti, V., Baldé, C. P., Kuehr, R., & Bel, G. (2020). The Global E-waste Monitor 
 			2020. United Nations University/United Nations Institute for Training and Research and the International Telecommunication Union.</i></p>
 			
-		 <p class="reference"><i>OMISOLA, I. (2021, 09 11). MUO. Retrieved from makeuseof.com: https://www.makeuseof.com/why-e-waste-is-dangerous/</i></p>
-		 <p class="reference"><i>Rodrigo, M. (2010, 09 26). sundaytimes.lk. Retrieved from sundaytimes.lk: https://www.sundaytimes.lk/100926/Plus/plus_01.html</i></p>
+		 <p class="reference"><i>OMISOLA, I. (2021, 09 11). MUO. Retrieved from makeuseof.com:<a href= "https://www.makeuseof.com/why-e-waste-is-dangerous/">https://www.makeuseof.com/why-e-waste-is-dangerous</a></i></p>
+		 <p class="reference"><i>Rodrigo, M. (2010, 09 26). sundaytimes.lk. Retrieved from sundaytimes.lk:<a href= "https://www.sundaytimes.lk/100926/Plus/plus_01.html">https://www.sundaytimes.lk/100926/Plus/plus_01.html</a></i></p>
 		 <p class="reference"><i>Business Insider. (2021, June 6).How 6 Million Pounds Of Electronic Waste Gets Recycled A Month | Big Business [Video]. </i></p>
-		<p class="reference"><i>YouTube.https://www.youtube.com/watch?v=S2lmPIa1iWE&ab_channel=BusinessInsider </i></p>
-
-		
-
+		<p class="reference"><i> <a href= "https://www.youtube.com/watch?v=S2lmPIa1iWE&ab_channel=BusinessInsider">https://www.youtube.com/watch?v=S2lmPIa1iWE&ab_channel=BusinessInsider</a></i></p></div>
+	
 	</body>
+
+	       
 </html>
+
+			
+			
