--- a/project.html
+++ b/project.html
@@ -13,6 +13,7 @@
 
 		<div class="image">
 		<img src="1.jpg">
+		<p class="colorimageref2"><i>(OMISOLA, 2021)</i></p>
 		</div>
 
 		<div class="para">
